ci.yaml modified

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,10 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: ${{ matrix.java }}
+      - name: Set Java 22 VarHandle Compatibility Flags
+        if: matrix.java == '22'
+        run: |
+          echo "JAVA_OPTS=-XX:+AllowRedefinitionToCopyMethods -XX:+EnableVarHandleGuardedAccess -Djava.lang.invoke.VarHandle.VAR_HANDLE_GUARDS=false" >> $GITHUB_ENV
       - name: Run tests
         run: sbt test
 
